--- a/assets/css/chroma.css
+++ b/assets/css/chroma.css
@@ -1,88 +1,88 @@
-/* Generated using: hugo gen chromastyles --style=monokai */
+/* Generated using: hugo gen chromastyles --style=onedark */
 
-/* Background */ .bg { color:#f8f8f2;background-color:#272822; }
-/* PreWrapper */ .chroma { color:#f8f8f2;background-color:#272822; }
+/* Background */ .bg { color:#abb2bf;background-color:#282c34; }
+/* PreWrapper */ .chroma { color:#abb2bf;background-color:#282c34; }
 /* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color:#960050;background-color:#1e0010 }
+/* Error */ .chroma .err {  }
 /* CodeLine */ .chroma .cl {  }
 /* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
 /* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
-/* LineHighlight */ .chroma .hl { background-color:#3c3d38 }
-/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f }
-/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f }
+/* LineHighlight */ .chroma .hl { background-color:#3d4148 }
+/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
+/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
 /* Line */ .chroma .line { display:flex; }
-/* Keyword */ .chroma .k { color:#66d9ef }
-/* KeywordConstant */ .chroma .kc { color:#66d9ef }
-/* KeywordDeclaration */ .chroma .kd { color:#66d9ef }
-/* KeywordNamespace */ .chroma .kn { color:#f92672 }
-/* KeywordPseudo */ .chroma .kp { color:#66d9ef }
-/* KeywordReserved */ .chroma .kr { color:#66d9ef }
-/* KeywordType */ .chroma .kt { color:#66d9ef }
-/* Name */ .chroma .n {  }
-/* NameAttribute */ .chroma .na { color:#a6e22e }
-/* NameClass */ .chroma .nc { color:#a6e22e }
-/* NameConstant */ .chroma .no { color:#66d9ef }
-/* NameDecorator */ .chroma .nd { color:#a6e22e }
-/* NameEntity */ .chroma .ni {  }
-/* NameException */ .chroma .ne { color:#a6e22e }
-/* NameLabel */ .chroma .nl {  }
-/* NameNamespace */ .chroma .nn {  }
-/* NameOther */ .chroma .nx { color:#a6e22e }
-/* NameProperty */ .chroma .py {  }
-/* NameTag */ .chroma .nt { color:#f92672 }
-/* NameBuiltin */ .chroma .nb {  }
-/* NameBuiltinPseudo */ .chroma .bp {  }
-/* NameVariable */ .chroma .nv {  }
-/* NameVariableClass */ .chroma .vc {  }
-/* NameVariableGlobal */ .chroma .vg {  }
-/* NameVariableInstance */ .chroma .vi {  }
-/* NameVariableMagic */ .chroma .vm {  }
-/* NameFunction */ .chroma .nf { color:#a6e22e }
-/* NameFunctionMagic */ .chroma .fm { color:#a6e22e }
-/* Literal */ .chroma .l { color:#ae81ff }
-/* LiteralDate */ .chroma .ld { color:#e6db74 }
-/* LiteralString */ .chroma .s { color:#e6db74 }
-/* LiteralStringAffix */ .chroma .sa { color:#e6db74 }
-/* LiteralStringBacktick */ .chroma .sb { color:#e6db74 }
-/* LiteralStringChar */ .chroma .sc { color:#e6db74 }
-/* LiteralStringDelimiter */ .chroma .dl { color:#e6db74 }
-/* LiteralStringDoc */ .chroma .sd { color:#e6db74 }
-/* LiteralStringDouble */ .chroma .s2 { color:#e6db74 }
-/* LiteralStringEscape */ .chroma .se { color:#ae81ff }
-/* LiteralStringHeredoc */ .chroma .sh { color:#e6db74 }
-/* LiteralStringInterpol */ .chroma .si { color:#e6db74 }
-/* LiteralStringOther */ .chroma .sx { color:#e6db74 }
-/* LiteralStringRegex */ .chroma .sr { color:#e6db74 }
-/* LiteralStringSingle */ .chroma .s1 { color:#e6db74 }
-/* LiteralStringSymbol */ .chroma .ss { color:#e6db74 }
-/* LiteralNumber */ .chroma .m { color:#ae81ff }
-/* LiteralNumberBin */ .chroma .mb { color:#ae81ff }
-/* LiteralNumberFloat */ .chroma .mf { color:#ae81ff }
-/* LiteralNumberHex */ .chroma .mh { color:#ae81ff }
-/* LiteralNumberInteger */ .chroma .mi { color:#ae81ff }
-/* LiteralNumberIntegerLong */ .chroma .il { color:#ae81ff }
-/* LiteralNumberOct */ .chroma .mo { color:#ae81ff }
-/* Operator */ .chroma .o { color:#f92672 }
-/* OperatorWord */ .chroma .ow { color:#f92672 }
+/* Keyword */ .chroma .k { color:#c678dd }
+/* KeywordConstant */ .chroma .kc { color:#e5c07b }
+/* KeywordDeclaration */ .chroma .kd { color:#c678dd }
+/* KeywordNamespace */ .chroma .kn { color:#c678dd }
+/* KeywordPseudo */ .chroma .kp { color:#c678dd }
+/* KeywordReserved */ .chroma .kr { color:#c678dd }
+/* KeywordType */ .chroma .kt { color:#e5c07b }
+/* Name */ .chroma .n { color:#e06c75 }
+/* NameAttribute */ .chroma .na { color:#e06c75 }
+/* NameClass */ .chroma .nc { color:#e5c07b }
+/* NameConstant */ .chroma .no { color:#e06c75 }
+/* NameDecorator */ .chroma .nd { color:#61afef }
+/* NameEntity */ .chroma .ni { color:#e06c75 }
+/* NameException */ .chroma .ne { color:#e06c75 }
+/* NameLabel */ .chroma .nl { color:#e06c75 }
+/* NameNamespace */ .chroma .nn { color:#e06c75 }
+/* NameOther */ .chroma .nx { color:#e06c75 }
+/* NameProperty */ .chroma .py { color:#e06c75 }
+/* NameTag */ .chroma .nt { color:#e06c75 }
+/* NameBuiltin */ .chroma .nb { color:#e5c07b }
+/* NameBuiltinPseudo */ .chroma .bp { color:#e5c07b }
+/* NameVariable */ .chroma .nv { color:#e06c75 }
+/* NameVariableClass */ .chroma .vc { color:#e06c75 }
+/* NameVariableGlobal */ .chroma .vg { color:#e06c75 }
+/* NameVariableInstance */ .chroma .vi { color:#e06c75 }
+/* NameVariableMagic */ .chroma .vm { color:#e06c75 }
+/* NameFunction */ .chroma .nf { color:#61afef;font-weight:bold }
+/* NameFunctionMagic */ .chroma .fm { color:#56b6c2;font-weight:bold }
+/* Literal */ .chroma .l {  }
+/* LiteralDate */ .chroma .ld {  }
+/* LiteralString */ .chroma .s { color:#98c379 }
+/* LiteralStringAffix */ .chroma .sa { color:#98c379 }
+/* LiteralStringBacktick */ .chroma .sb { color:#98c379 }
+/* LiteralStringChar */ .chroma .sc { color:#98c379 }
+/* LiteralStringDelimiter */ .chroma .dl { color:#98c379 }
+/* LiteralStringDoc */ .chroma .sd { color:#98c379 }
+/* LiteralStringDouble */ .chroma .s2 { color:#98c379 }
+/* LiteralStringEscape */ .chroma .se { color:#98c379 }
+/* LiteralStringHeredoc */ .chroma .sh { color:#98c379 }
+/* LiteralStringInterpol */ .chroma .si { color:#98c379 }
+/* LiteralStringOther */ .chroma .sx { color:#98c379 }
+/* LiteralStringRegex */ .chroma .sr { color:#98c379 }
+/* LiteralStringSingle */ .chroma .s1 { color:#98c379 }
+/* LiteralStringSymbol */ .chroma .ss { color:#98c379 }
+/* LiteralNumber */ .chroma .m { color:#d19a66 }
+/* LiteralNumberBin */ .chroma .mb { color:#d19a66 }
+/* LiteralNumberFloat */ .chroma .mf { color:#d19a66 }
+/* LiteralNumberHex */ .chroma .mh { color:#d19a66 }
+/* LiteralNumberInteger */ .chroma .mi { color:#d19a66 }
+/* LiteralNumberIntegerLong */ .chroma .il { color:#d19a66 }
+/* LiteralNumberOct */ .chroma .mo { color:#d19a66 }
+/* Operator */ .chroma .o { color:#56b6c2 }
+/* OperatorWord */ .chroma .ow { color:#56b6c2 }
 /* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color:#75715e }
-/* CommentHashbang */ .chroma .ch { color:#75715e }
-/* CommentMultiline */ .chroma .cm { color:#75715e }
-/* CommentSingle */ .chroma .c1 { color:#75715e }
-/* CommentSpecial */ .chroma .cs { color:#75715e }
-/* CommentPreproc */ .chroma .cp { color:#75715e }
-/* CommentPreprocFile */ .chroma .cpf { color:#75715e }
+/* Comment */ .chroma .c { color:#7f848e }
+/* CommentHashbang */ .chroma .ch { color:#7f848e }
+/* CommentMultiline */ .chroma .cm { color:#7f848e }
+/* CommentSingle */ .chroma .c1 { color:#7f848e }
+/* CommentSpecial */ .chroma .cs { color:#7f848e }
+/* CommentPreproc */ .chroma .cp { color:#7f848e }
+/* CommentPreprocFile */ .chroma .cpf { color:#7f848e }
 /* Generic */ .chroma .g {  }
-/* GenericDeleted */ .chroma .gd { color:#f92672 }
-/* GenericEmph */ .chroma .ge { font-style:italic }
+/* GenericDeleted */ .chroma .gd { color:#e06c75 }
+/* GenericEmph */ .chroma .ge {  }
 /* GenericError */ .chroma .gr {  }
 /* GenericHeading */ .chroma .gh {  }
-/* GenericInserted */ .chroma .gi { color:#a6e22e }
+/* GenericInserted */ .chroma .gi { color:#98c379;font-weight:bold }
 /* GenericOutput */ .chroma .go {  }
 /* GenericPrompt */ .chroma .gp {  }
-/* GenericStrong */ .chroma .gs { font-weight:bold }
-/* GenericSubheading */ .chroma .gu { color:#75715e }
+/* GenericStrong */ .chroma .gs {  }
+/* GenericSubheading */ .chroma .gu {  }
 /* GenericTraceback */ .chroma .gt {  }
 /* GenericUnderline */ .chroma .gl {  }
 /* TextWhitespace */ .chroma .w {  }
