--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,9 @@ i {
     ol {
         @apply list-decimal list-inside mb-4
     }
+    ol li::marker {
+        @apply font-bold
+    }
     blockquote {
         @apply border-l-4 pl-4 italic text-gray-600
     }
@@ -25,7 +28,10 @@ i {
         @apply text-blue-500 hover:text-blue-700 hover:underline 
     }
     pre {
-        @apply rounded-md overflow-x-auto whitespace-pre-wrap break-words;
+        @apply rounded-md overflow-x-auto whitespace-pre-wrap break-words py-2;
+    }
+    code:not(pre code) {
+        @apply bg-gray-200 text-gray-800 rounded-md px-1 py-0.5
     }
 }
 
