--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ .Title }} | {{ .Site.Title }}</title>
+    <title>
+        {{ if .IsHome }}
+          {{ .Site.Title }}
+        {{ else }}
+          {{ .Title }} | {{ .Site.Title }}
+        {{ end }}
+      </title>
     <meta name="description" content="{{.Site.Params.description}}">
     <link rel="icon" href="/{{ .Site.Params.favicon }}" type="image/png">
     {{ partial "css.html" . }}
