--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,9 +7,12 @@ i {
 
 .blog-content {
     h1 {
-        @apply text-3xl font-bold mb-4
+        @apply text-4xl font-bold mb-4
     }
     h2 {
+        @apply text-3xl font-bold mb-4
+    }
+    h3 {
         @apply text-2xl font-bold mb-4
     }
     ul {
