--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -9,7 +9,7 @@
   <div class="container relative mx-auto px-4 md:px-8">
     <div class="mx-auto max-w-3xl text-center">
       <div class="flex mt-6 justify-center animate-fade-in-up">
-        <img src="/images/profile-medium.png" data-high-res="/images/profile.png" alt="Profile picture" class="lazy h-48 w-48 rounded-full shadow-lg object-cover" />
+        <img src="/images/profile-small.png" data-high-res="/images/profile-medium.png" alt="Profile picture" class="lazy h-48 w-48 rounded-full shadow-lg object-cover" />
       </div>
       <h1 class="animate-fade-in-up bg-gradient-to-r leading-snug from-white via-blue-100 to-white bg-clip-text text-4xl font-bold tracking-tight text-transparent md:text-6xl [text-wrap:balance] dark:text-white">
         {{ $.Site.Data.hero.headline }}
